Add final presentation assets

--- a/slides/app/deck.mdx
+++ b/slides/app/deck.mdx
@@ -8,13 +8,17 @@ import { Image } from 'mdx-deck';
 
 # Poll Time
 
-How many are Cloud-savvy?
+How many are Cloud Operators?
+
+How many are Developers?
 
 ---
 
 # Poll Time
 
-How many people have scripted automation?
+How many have scripted app deployments?
+
+How many have fully automated infrastructure provisioning?
 
 ---
 
@@ -145,7 +149,7 @@ Let's make a thing in the cloud!
 
 ---
 
-<Image src='images/demo1-supplemental' />
+<Image src='images/demo1-supplemental.png' />
 
 ---
 
@@ -157,15 +161,25 @@ Including things like local files and keys.
 
 ---
 
-# Destroy all the things
-
----
-
 # Another Demo
 
 ---
 
 <Image src='images/demo2.png' />
+
+---
+
+# Another User case to think about
+
+- Team meetings
+- Project updates
+- 'Save the date' info site
+- Quick demo for client
+- Fantasy Football Week Winners
+
+---
+
+<Image src='images/demo2-supplemental.png' />
 
 ---
 
